Swagger: api spec for exhibition artist info api
